# mds3

./: .gitignore  CMakeLists.txt  DDR5_baseline.json  DDR5_baselineepoch.json  README.md  stats.py
DRAMsim3/: CMakeLists.txt
config_dramsim3/: base.ini  moat_ath128.ini  moat_ath16.ini  moat_ath20.ini  moat_ath24.ini  moat_ath28.ini  moat_ath32.ini  moat_ath64.ini  moat_nth1000.ini  moat_nth2000.ini  moat_nth250.ini  moat_nth500.ini  moat_rth512.ini  pac_nth1000.ini  pac_nth2000.ini  pac_nth250.ini  pac_nth500.ini  pac_rth512.ini  todo.txt
data/: moat_ath_sens.ipc.csv  mopac.ipc.csv  mopac.ws.csv  mopac_buf_sens.ipc.csv  mopac_buf_sens_ref0.ipc.csv  mopac_buf_sens_ref1.ipc.csv  mopac_buf_sens_ref2.ipc.csv  mopac_rp.ipc.csv  mopac_rp.ws.csv  pac.ipc.csv  pac.ws.csv  pac_rp.ipc.csv  pac_rp.ws.csv  sens_moat.ipc.csv  sens_moat.ws.csv  sens_mopac_buf.ipc.csv  sens_mopac_buf.ws.csv  sens_mopac_buf_nrh1000.ipc.csv  sens_mopac_buf_nrh1000.ws.csv  sens_mopac_buf_nrh250.ipc.csv  sens_mopac_buf_nrh250.ws.csv  sens_mopac_buf_nrh500.ipc.csv  sens_mopac_buf_nrh500.ws.csv  sens_mopac_df.ipc.csv  sens_mopac_df.ws.csv  sens_mopac_df_nrh1000.ipc.csv  sens_mopac_df_nrh1000.ws.csv  sens_mopac_df_nrh250.ipc.csv  sens_mopac_df_nrh250.ws.csv  sens_mopac_df_nrh500.ipc.csv  sens_mopac_df_nrh500.ws.csv  sens_mopac_df_nrh{nrh}.ws.csv  sens_mopac_qth.ipc.csv  sens_mopac_qth.ws.csv
scripts/: prac_build.py  prac_run.py  prac_stats.py  ratchet.py  run.py  run_pace.py  stats.py
src/: DDR5_baseline.json  Makefile  dram.cpp  dram.h  drambank.cpp  drambank.h  dramchannel.cpp  externs.h  mcache.cpp  (+11 more)
(+117 files in other folders)
